--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<!-- Website Template by freewebsitetemplates.com -->
+
 <html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mustache Enthusiast</title>
+	<title>First Website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -36,37 +36,37 @@
 		<div id="featured">
 			<img src="images/the-beacon.jpg" alt="">
 			<div>
-				<h2>the beacon to all mankind</h2>
-				<span>Our website templates are created with</span>
-				<span>inspiration, checked for quality and originality</span>
-				<span>and meticulously sliced and coded.</span>
+				<h2>the rode to code success</h2>
+				<span>This is my First Website published </span>
+				<span>I made it out of boredom and knoledge of code</span>
+				<span>It took quite some time but it is done.</span>
 				<a href="blog-single-post.html" class="more">read more</a>
 			</div>
 		</div>
 		<ul>
 			<li>
 				<a href="gallery.html">
-					<img src="images/the-father.jpg" alt="">
-					<span>the father</span>
+					<img src="images/coder.jpg" alt="">
+					<span>the coder</span>
 				</a>
 			</li>
 			<li>
 				<a href="gallery.html">
-					<img src="images/the-actor.jpg" alt="">
+					<img src="images/.jpg" alt="">
 					<span>the actor</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
-					<img src="images/the-nerd.jpg" alt="">
-					<span>the nerd</span>
+				<x><a href="gallery.html">
+					<img src="images/.jpg" alt="">
+					<span>the nerd</span></x>
 				</a>
 			</li>
 		</ul>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2017 by Sebastian. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
