--- a/blog-single-post.html
+++ b/blog-single-post.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<!-- Website Template by freewebsitetemplates.com -->
+
 <html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog Single Post - Mustache Enthusiast</title>
+	<title>Blog Single Post - Code Enthusiast</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -37,34 +37,34 @@
 		<div>
 			<img src="images/grew-a-mustache.jpg" alt="">
 			<div class="article">
-				<h2>WHY I GREW A MUSTACHE</h2>
+				<h2>WHY I MADE THIS</h2>
 				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the Terms of Use. You can even remove all our links if you want to.
+					I have no clue.
 				</p>
 				<p>
-					Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special. And we love the challenge of doing something different and something special.
+					Probobly out of boredom.
 				</p>
 				<p>
-					If you’re experiencing issues and concerns about this website template, join the discussion on our forum and meet other people in the community who share the same interests with you. Website Template details, discussion and updates for this Mustacchio Template. Website Template design by Free Website Templates.
+					This is still Work In Progress - jus letin' ya' know.
 				</p>
 			</div>
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2017 by Sebastian. All rights reserved.</p>
 			<ul>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+					<a href="http://   /go/twitter/" id="twitter">twitter</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+					<a href="http://   /go/facebook/" id="facebook">facebook</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+					<a href="http://   /go/googleplus/" id="googleplus">googleplus</a>
 				</li>
 				<li>
-					<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+					<a href="http://pinterest.com/" id="pinterest">pinterest</a>
 				</li>
 			</ul>
 		</div>
