--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<!-- Website Template by freewebsitetemplates.com -->
+
 <html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contact - Mustache Enthusiast</title>
+	<title>Contact - Code Enthusiast</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -45,19 +45,19 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2017 by Sebastian. All rights reserved.</p>
 			<ul>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+					<a href="http:// /go/twitter/" id="twitter">twitter</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+					<a href="http:// /go/facebook/" id="facebook">facebook</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+					<a href="http:// /go/googleplus/" id="googleplus">googleplus</a>
 				</li>
 				<li>
-					<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+					<a href="http://pinterest.com/" id="pinterest">pinterest</a>
 				</li>
 			</ul>
 		</div>
