--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog - Mustache Enthusiast</title>
+	<title>Blog - Code Enthusiast</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -38,12 +38,12 @@
 			<ul>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/cutting-mustache.jpg" alt="">
+						<img src="images/.jpg" alt="">
 					</a>
 					<div>
-						<h3>why i grew a mustache</h3>
+						<h3>why i like code</h3>
 						<p>
-							Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
+						Something will go here.	
 						</p>
 						<a href="blog-single-post.html" class="more">read this</a>
 					</div>
@@ -62,7 +62,7 @@
 				</li>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/mustache-brothers.jpg" alt="">
+						<img src="images/.jpg" alt="">
 					</a>
 					<div>
 						<h3>the mustache brothers</h3>
@@ -77,19 +77,19 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2017 by Sebastian. All rights reserved.</p>
 			<ul>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+					<a href="http:// /go/twitter/" id="twitter">twitter</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+					<a href="http:// /go/facebook/" id="facebook">facebook</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+					<a href="http:// /go/googleplus/" id="googleplus">googleplus</a>
 				</li>
 				<li>
-					<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+					<a href="http://pinterest.com" id="pinterest">pinterest</a>
 				</li>
 			</ul>
 		</div>
