--- a/gallery-single-post.html
+++ b/gallery-single-post.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Gallery Single Post - Mustache Enthusiast</title>
+	<title>Gallery Single Post - Code Enthusiast</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -39,26 +39,26 @@
 			<div class="article">
 				<h4>PRIM AND PROPER</h4>
 				<p>
-				Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
+				Something will go here.
 				</p>
 			</div>
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2017 by Sebastian. All rights reserved.</p>
 			<ul>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+					<a href="http:// /go/twitter/" id="twitter">twitter</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+					<a href="http:// /go/facebook/" id="facebook">facebook</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+					<a href="http:// /go/googleplus/" id="googleplus">googleplus</a>
 				</li>
 				<li>
-					<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+					<a href="http://pinterest.com/" id="pinterest">pinterest</a>
 				</li>
 			</ul>
 		</div>
