--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 			<p>&copy; 2017 by Sebastian. All rights reserved.</p>
 			<ul>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+					<a href="http:// /go/twitter/" id="twitter">twitter</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+					<a href="http:// /go/facebook/" id="facebook">facebook</a>
 				</li>
 				<li>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+					<a href="http:// /go/googleplus/" id="googleplus">googleplus</a>
 				</li>
 				<li>
-					<a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+					<a href="http://pinterest.com/" id="pinterest">pinterest</a>
 				</li>
 			</ul>
 		</div>
