--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Website Template by freewebsitetemplates.com -->
+
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -53,9 +53,9 @@
 						<img src="images/in-the-country.jpg" alt="">
 					</a>
 					<div>
-						<h3>in the country</h3>
+						<h3>in the code</h3>
 						<p>
-							Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
+							Words!
 						</p>
 						<a href="blog-single-post.html" class="more">read this</a>
 					</div>
@@ -65,9 +65,9 @@
 						<img src="images/.jpg" alt="">
 					</a>
 					<div>
-						<h3>the mustache brothers</h3>
+						<h3>the code brothers</h3>
 						<p>
-							Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
+							More Words!
 						</p>
 						<a href="blog-single-post.html" class="more">read this</a>
 					</div>
