--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
 	<div id="body">
 		<h1><span>code started</span></h1>
 		<div>
-			<img src="images/photographer.jpg" alt="">
+			<img src="images/grew-a-mustache.jpg" alt="">
 			<div class="article">
 				<h3>Code is AWESOME</h3>
 				<p>
 					Words!
 				</p>
-				<h3>We Have More Templates for You</h3>
+				<h3>We Have More Code For You</h3>
 				<p>
 					Looking Words?
 				</p>
