knoledge to knowledge

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div>
 				<h2>the rode to code success</h2>
 				<span>This is my First Website published </span>
-				<span>I made it out of boredom and knoledge of code</span>
+				<span>I made it out of boredom and knowledge of code</span>
 				<span>It took quite some time but it is done.</span>
 				<a href="blog-single-post.html" class="more">read more</a>
 			</div>
