--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</li>
 			<li>
 				<x><a href="gallery.html">
-					<img src="images/.jpg" alt="">
+					<img src="images/the-nerd.jpg" alt="">
 					<span>the nerd</span></x>
 				</a>
 			</li>
