--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</li>
 			<li>
 				<a href="gallery.html">
-					<img src="images/.jpg" alt="">
+					<img src="images/the-actor.jpg" alt="">
 					<span>the actor</span>
 				</a>
 			</li>
