--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 			<ul>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/grew-a-mustache.jpg" alt="">
+						<img src="images/grew-a-mustache1.jpg" alt="">
 					</a>
 					<div>
 						<h3>why i like code</h3>
@@ -50,7 +50,7 @@
 				</li>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/the-beacon.jpg" alt="">
+						<img src="images/the-beacon1.jpg" alt="">
 					</a>
 					<div>
 						<h3>in the code</h3>
