--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
 				</li>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/.jpg" alt="">
+						<img src="images/codecademy.jpg" alt="">
 					</a>
 					<div>
 						<h3>the code brothers</h3>
