--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
 				</p>
 				<h3>We Have More Code For You</h3>
 				<p>
-					Looking Words?
+					Looking for Words?
 				</p>
-				<h3>Be Part of Codey</h3>
+				<h3>Be Part of Code</h3>
 				<p>
 					More Words!
 				</p>
