--- a/gallery-single-post.html
+++ b/gallery-single-post.html
@@ -37,7 +37,7 @@
 		<div>
 			<img src="images/prim-and-proper.jpg" alt="">
 			<div class="article">
-				<h4>PRIM AND PROPER</h4>
+				<h4>CODE AND CODER</h4>
 				<p>
 				Something will go here.
 				</p>
