--- a/blog-single-post.html
+++ b/blog-single-post.html
@@ -42,10 +42,10 @@
 					I have no clue.
 				</p>
 				<p>
-					Probobly out of boredom.
+					Probably out of boredom.
 				</p>
 				<p>
-					This is still Work In Progress - jus letin' ya' know.
+					This is still Work In Progress - just lettin' ya' know.
 				</p>
 			</div>
 		</div>
