--- a/gallery-single-post.html
+++ b/gallery-single-post.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h4>CODE AND CODER</h4>
 				<p>
-				Something will go here. <video> <iframe width="560" height="315" src="https://www.youtube.com/embed/Bv_5Zv5c-Ts?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> </video>
+				Something will go here. <iframe width="560" height="315" src="https://www.youtube.com/embed/Bv_5Zv5c-Ts?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> 
 				</p>
 			</div>
 		</div>
