--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>let's keep in touch</span></h1>
+		<h1><span>let's <i>not</i> keep in touch</span></h1>
 		<form action="contact.html">
 			<input type="text" name="fname" id="fname" value="name">
 			<input type="text" name="address" id="address" value="address">
